--- a/DCGAN_MNIST.ipynb
+++ b/DCGAN_MNIST.ipynb
@@ -28,13 +28,36 @@
     },
     {
       "metadata": {
+        "id": "jKgRFC8_6MM_",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### Reference\n",
+        "Github Resource: \n",
+        "1. https://github.com/eriklindernoren/Keras-GAN/tree/master/dcgan\n",
+        "2. https://github.com/daymos/simple_keras_GAN"
+      ]
+    },
+    {
+      "metadata": {
+        "id": "_dLT1KRu7EC6",
+        "colab_type": "text"
+      },
+      "cell_type": "markdown",
+      "source": [
+        "#### This program is the first lesson for begineer's level workers to understand how to build a GAN model and how it works."
+      ]
+    },
+    {
+      "metadata": {
         "id": "F78zKny4lY2H",
         "colab_type": "code",
+        "outputId": "269b745e-82ae-4a87-baad-e144c3dab58a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "269b745e-82ae-4a87-baad-e144c3dab58a"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -48,7 +71,7 @@
         "import matplotlib.pyplot as plt\n",
         "plt.style.use('seaborn-whitegrid')"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -148,18 +171,18 @@
       "metadata": {
         "id": "FUOcvoWkAo_u",
         "colab_type": "code",
+        "outputId": "65a6a136-b6e2-411f-f95e-3a26798831a9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1036
-        },
-        "outputId": "65a6a136-b6e2-411f-f95e-3a26798831a9"
+        }
       },
       "cell_type": "code",
       "source": [
         "model_G = generator()\n",
         "model_G.summary()"
       ],
-      "execution_count": 6,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -228,18 +251,18 @@
       "metadata": {
         "id": "x93HchitxFMu",
         "colab_type": "code",
+        "outputId": "dd819c65-b8be-42a0-c495-768c8d5260c9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 689
-        },
-        "outputId": "dd819c65-b8be-42a0-c495-768c8d5260c9"
+        }
       },
       "cell_type": "code",
       "source": [
         "model_D = discriminator()\n",
         "model_D.summary()"
       ],
-      "execution_count": 7,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -290,11 +313,11 @@
       "metadata": {
         "id": "6pIE3gn9A64P",
         "colab_type": "code",
+        "outputId": "cf21859f-543a-4f29-aa51-489748582481",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 181
-        },
-        "outputId": "cf21859f-543a-4f29-aa51-489748582481"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -305,7 +328,7 @@
         "\n",
         "model_discriminator.summary()"
       ],
-      "execution_count": 8,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -328,11 +351,11 @@
       "metadata": {
         "id": "-qhnhUpFCDYz",
         "colab_type": "code",
+        "outputId": "0d7d6af8-8856-4b76-ed7a-59bd0b389b0b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 217
-        },
-        "outputId": "0d7d6af8-8856-4b76-ed7a-59bd0b389b0b"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -347,7 +370,7 @@
         "\n",
         "model_adversarial.summary()"
       ],
-      "execution_count": 9,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -372,11 +395,11 @@
       "metadata": {
         "id": "vI1JR2yBEblF",
         "colab_type": "code",
+        "outputId": "deb4ce7d-55ff-4120-9f7a-3b7886504342",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 53
-        },
-        "outputId": "deb4ce7d-55ff-4120-9f7a-3b7886504342"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -387,7 +410,7 @@
         "X_train = np.expand_dims(X_train, axis=3)\n",
         "print(X_train.shape)"
       ],
-      "execution_count": 10,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -403,17 +426,17 @@
       "metadata": {
         "id": "kePwdAn8G1jF",
         "colab_type": "code",
+        "outputId": "62789a75-b02a-42e3-b8ce-71e30ff4f7f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        },
-        "outputId": "62789a75-b02a-42e3-b8ce-71e30ff4f7f5"
+        }
       },
       "cell_type": "code",
       "source": [
         "len(X_train)"
       ],
-      "execution_count": 11,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -433,11 +456,11 @@
       "metadata": {
         "id": "aU1FIIIvJe_F",
         "colab_type": "code",
+        "outputId": "302bac12-cc55-4c35-923a-6e823d9cf7cd",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 598
-        },
-        "outputId": "302bac12-cc55-4c35-923a-6e823d9cf7cd"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -445,7 +468,7 @@
         "b = np.zeros((16, 1))\n",
         "np.concatenate((a,b))"
       ],
-      "execution_count": 12,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -558,17 +581,17 @@
       "metadata": {
         "id": "naiS4GTEMHSW",
         "colab_type": "code",
+        "outputId": "307db575-6b68-491c-d668-59030a637179",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 673
-        },
-        "outputId": "307db575-6b68-491c-d668-59030a637179"
+        }
       },
       "cell_type": "code",
       "source": [
         "_ = train(X_train)"
       ],
-      "execution_count": 14,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -629,11 +652,11 @@
       "metadata": {
         "id": "s7ClpafBMUCh",
         "colab_type": "code",
+        "outputId": "f6dcf676-1f24-4413-944d-ddcef8c69f61",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 606
-        },
-        "outputId": "f6dcf676-1f24-4413-944d-ddcef8c69f61"
+        }
       },
       "cell_type": "code",
       "source": [
@@ -670,7 +693,7 @@
         "ax5.title.set_text('2000 epochs')\n",
         "ax6.title.set_text('2500 epochs')"
       ],
-      "execution_count": 23,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "display_data",
